--- a/csirt.divd.nl/_includes/timeline_gantt.html
+++ b/csirt.divd.nl/_includes/timeline_gantt.html
@@ -27,7 +27,7 @@
 			{%- if line.end -%}
 				{%- if line.end == "open" -%}
 					{{ line.event | markdownify | remove: '<p>' | remove: '</p>' | strip_html | strip_newlines }} (?d): {{ line.start }}, {{ caseend }}
-				{%- else -%}
+				{% else -%}
 					{%- comment %} convert our dates to Number of seconds since 1970-01-01 00:00:00 UTC {% endcomment -%}
 					{%- assign lineStart = line.start | date: '%s' -%}
 					{%- assign lineEnd   = line.end   | date: '%s' -%}
