--- a/_layouts/report.html
+++ b/_layouts/report.html
@@ -6,7 +6,7 @@ layout: default
     <span>{{ page.date }} by <a href='/team/{{ page.author }}'>{{ page.author }}</a></span>
 </header>
 
-Case lead: <a href='/team/{{ page.lead | url_encode }}/'>{{ page.lead }}</a><br>
+Case lead: <a href='/team/{{ page.lead | uri_escape }}/'>{{ page.lead }}</a><br>
 CSIRT:
 {% assign first = true %} 
 {% for c in page.csirt %}
@@ -15,7 +15,7 @@ CSIRT:
 	{% else %}
 		,
 	{% endif %}
-	<a href='/team/{{ c | url_encode }}/'>{{ c }}</a>
+	<a href='/team/{{ c | uri_escape }}/'>{{ c }}</a>
 {% endfor %}<br>
 Researchers: 
 {% assign first = true %} 
@@ -25,7 +25,7 @@ Researchers:
 	{% else %}
 		,
 	{% endif %}
-	<a href='/team/{{ c | url_encode }}/'>{{ c }}</a>
+	<a href='/team/{{ c | uri_escape }}/'>{{ c }}</a>
 {% endfor %}
 
 <p>
