--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -4,7 +4,15 @@
         {%- if page.url != "/blog/" and page.layout == "post" -%}
             <span class="logo no-print"><a href="/">Home</a> / <a href="/blog/">Blog</a> / {{ page.title | capitalize }}</span>
         {%- elsif page.url contains "/cases/" and page.url != "/cases/" -%}
-            <span class="logo no-print"><a href="/">Home</a> / <a href="/cases/">Cases</a> / {{ page.title | capitalize }}</span>
+            {% if page.layout == "case" %}
+                <span class="logo no-print"><a href="/">Home</a> / <a href="/cases/">Cases</a> / {{ page.title | capitalize }}</span>
+            {% else %}
+                {% if page.case %}
+                    <span class="logo no-print"><a href="/">Home</a> / <a href="/cases/">Cases</a> / <a href="/{{ page.case }}">{{ page.case }}</a> / {{ page.title | capitalize }}</span>
+                {% else %}
+                    <span class="logo no-print"><a href="/">Home</a> / <a href="/cases/">Cases</a> / {{ page.title | capitalize }}</span>
+                {% endif %}
+            {% endif %}
         {%- elsif page.url contains "/cves/" and page.url != "/cves/" -%}
             <span class="logo no-print"><a href="/">Home</a> / <a href="/cves/">CVEs</a> / {{ page.cve | capitalize }}</span>
         {%- elsif page.url == "/cves/" -%}
