--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -209,7 +209,8 @@ code {
   border-radius: 4px;
   border: solid 1px;
   font-family: "Courier New", monospace;
-  font-size: 0.7rem;
+  //font-size: 0.7rem;
+  font-size: 80%;
   margin: 0 0.25rem;
   padding: 0.25rem 0.65rem; }
 
@@ -238,7 +239,9 @@ a {
   color: #1e6bb8; }
 
 strong, b {
-  color: #555555; }
+  color: black; 
+  font-size: 110%;
+}
 
 h1, h2, h3, h4, h5, h6 {
   color: #555555; }
