Fixing the build

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -29,7 +29,7 @@ gtag('config', '{{ site.google_analytics }}');
 </script>
 {% endif %}
 {% if site.goatcounter %}
-    <script data-goatcounter="https://{{ site.goatcounter }}.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
+    <script data-goatcounter="https://{{ site.goatcounter }}.goatcounter.com/count" async src="https://gc.zgo.at/count.js"></script>
 {% endif %}
 </body>
 </html>
