--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
 </section>
 {% else %}
 <!-- Heading -->
-<div id="banner" >
+<div id="banner" class="no-prints">
   <div class="inner">
     <h1 class="project-name">{{ site.title }}</h1>
     <p class="project-tagline">{{ page.description | default: site.description | default: site.github.project_tagline }}</p>
