File and cosmetic changes...

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -23,5 +23,5 @@ layout: page
 {{ content }}
 
 <hr>
-Last modified: {{ page.last_modified_at | date: "%d %b %Y %H:%M"}}
+Last modified: {{ page.last_modified_at | date: "%d %b %Y %H:%M %Z"}}
 
