--- a/_layouts/case.html
+++ b/_layouts/case.html
@@ -120,7 +120,7 @@ layout: default
 				Last modified
 			</td>
 			<td>
-				{{ page.last_modified_at | date: "%d %b %Y %H:%M"}}
+				{{ page.last_modified_at | date: "%d %b %Y %H:%M %Z"}}
 			</td>
 		</tr>
 	</tbody>
