Publishing this because the vendor has published

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer id="footer">
+<footer id="footer" class='no-print'>
     <div class="inner">
         <div class="content">
             <ul class="plain">
