Guideline on credential leaks

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: 'en-US' }}">
 <head>
     <meta charset="UTF-8">
     <base href="/">
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/main.css">
     <link rel="stylesheet" href="assets/css/mermaid.css">
+    <link rel="stylesheet" href="assets/css/syntax.css">
 </head>
 <body>
     <a id="skip-to-content" href="#content">Skip to the content.</a>
