Added CVE records and update case file

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2902,6 +2902,10 @@ table.affected th {
     {
         display: none !important;
     }
+
+    body {
+      padding-top: 0;
+    }
 }
 
 .hidden {
