--- a/assets/css/menu.scss
+++ b/assets/css/menu.scss
@@ -52,6 +52,8 @@ $menu-bg-image: none;
         top: 100%;
         left: 0;
         max-width: min(700px, calc(100vw - 40px));
+        max-height: calc(100vh - 250px);
+        overflow-y: auto;
         white-space: normal;
        }
      }
